# roshancleancode

./: .env.example.web  .gitignore  AZURE_SETUP.md  CLAUDE.md  DEMO_README.md  auth_helper.py  azure_file_manager.py  check_column_consistency.py  check_table_consistency.py  config.py  datafeed_scanner.py  dfinsidefolder.py  param_manager_scanner.py  projectplan.md  pyproject.toml  requirements-web.txt  requirements.txt  search_blob.py  simple_rename.py  startup.txt  validate_table_columns.py  web_config.py  webapp.py  webapp_demo.py
static/css/: styles.css
templates/: base.html  dashboard.html  error.html  index.html  results.html
y/: table_consistency_report.html
